<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginHorizontal="24dp"
    android:background="@drawable/border_radius24"
    android:padding="24dp">


    <TextView
        android:id="@+id/tv_title_ty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/thank_you"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_content_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/manrope_medium"
        android:text="@string/thank_you_for"
        android:textColor="#747474"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_ty" />




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit_got_it"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_background_button_thank"
        android:fontFamily="@font/manrope_bold"
        android:gravity="center"
        android:text="@string/got_it"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_content_01" />


</androidx.constraintlayout.widget.ConstraintLayout>
