<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:src="@drawable/ic_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_no_data"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_no_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <TextView
        android:id="@+id/tv_found_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/no_answer_found"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_no_data" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/manrope_medium"
        android:text="@string/check_if_the_image_is_clear_or_try_a_different_question"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_found_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_the_img_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_boder_12_e5e5e5e"
        android:backgroundTint="#F4F4F4"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_content">

        <TextView
            android:id="@+id/the_img_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_image_is_clear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="263dp"
            android:layout_height="85dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_scan1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/the_img_clear" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_boder_12_e5e5e5e"
        android:backgroundTint="#F4F4F4"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/cl_the_img_clear">

        <TextView
            android:id="@+id/txt_too_dim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/the_lighting_is_too_dim"
            android:textColor="#EE5B5B"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_to_dim"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="13dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_scan3"
            app:layout_constraintEnd_toStartOf="@id/img_so_far"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_too_dim" />

        <TextView
            android:id="@+id/txt_too_far"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/the_distance_is_too_far"
            android:textColor="#EE5B5B"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/img_so_far"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_so_far"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="6dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_scan4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_to_dim"
            app:layout_constraintTop_toBottomOf="@id/txt_too_dim" />

        <TextView
            android:id="@+id/txt_too_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/the_image_is_tilted"
            android:textColor="#EE5B5B"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/img_so_far"
            app:layout_constraintTop_toBottomOf="@id/img_so_far" />

        <ImageView
            android:id="@+id/img_so_title"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="6dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_scan6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_not_clear"
            app:layout_constraintTop_toBottomOf="@id/txt_too_title" />

        <TextView
            android:id="@+id/txt_not_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/the_image_is_not_clear"
            android:textColor="#EE5B5B"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_to_dim" />

        <ImageView
            android:id="@+id/img_not_clear"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="13dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_scan5"
            app:layout_constraintEnd_toStartOf="@id/img_so_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_not_clear" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/btn_ask_question"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_border_8_unit_neutral_off"
        android:backgroundTint="#F47026"
        android:fontFamily="@font/manrope_bold"
        android:gravity="center"
        android:text="@string/ask_a_different_question"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_warning" />
</androidx.constraintlayout.widget.ConstraintLayout>