<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginHorizontal="16dp"
    android:background="@drawable/border_radius24"
    android:padding="16dp">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/do_you_like"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/img_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/let_us_know"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <LinearLayout
        android:id="@+id/llRating"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_content">

        <ImageView
            android:id="@+id/rootRate1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/ic_rate_unseclect"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/rootRate2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/ic_rate_unseclect"
            android:orientation="horizontal" />


        <ImageView
            android:id="@+id/rootRate3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/ic_rate_unseclect"
            android:orientation="horizontal" />


        <ImageView
            android:id="@+id/rootRate4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/ic_rate_unseclect"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/rootRate5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_rate_unseclect"
            android:orientation="horizontal" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_button_viewreport"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/btn_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llRating" />

    <TextView
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_background_button"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/sumbit"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/llRating" />


</androidx.constraintlayout.widget.ConstraintLayout>
