<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="12dp"
    tools:context=".ui.history.activity.HistoryActivityNew">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_back_his"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/history_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/his_scan"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/bg_border_8_history_on"
        android:fontFamily="@font/manrope_medium"
        android:gravity="center"
        android:text="@string/scan_to_solve"
        android:textColor="#F47026"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/his_tutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_header_history" />


    <TextView
        android:id="@+id/his_tutor"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_border_8_history"
        android:fontFamily="@font/manrope_medium"
        android:gravity="center"
        android:text="@string/ai_tutor"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/his_scan"
        app:layout_constraintTop_toBottomOf="@id/cl_header_history" />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container_his_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/his_scan" />
</androidx.constraintlayout.widget.ConstraintLayout>